@@ -1226,14 +1226,22 @@ void UpdateMacro()
             }
         }
 
-        if(!OnScreen)
+        // !OnScreen requires Player to leave Screen during normal play.
+        // is_cheat ensures the ItsVegas Cheat doesn't Softlock the game.
+        bool is_cheat = (LevelMacroWhich == -1);
+
+        if(!OnScreen || is_cheat)
         {
             LevelMacroCounter++;
 
-            if(g_config.EnableInterLevelFade && LevelMacroCounter == 34)
+            if(g_config.EnableInterLevelFade &&
+                ((LevelMacroCounter == 34 && !is_cheat)
+                || (LevelMacroCounter == 250 && is_cheat)))
+            {
                 g_levelScreenFader.setupFader(1, 0, 65, ScreenFader::S_FADE);
+            }
 
-            if(LevelMacroCounter >= 100)
+            if((!is_cheat && LevelMacroCounter >= 100) || (is_cheat && LevelMacroCounter >= 316))
             {
                 LevelBeatCode = 1;
                 LevelMacro = LEVELMACRO_OFF;
