@@ -27,6 +27,7 @@ Changelog for 1.3.6.1
 -If controller inputs are displayed onscreen, Player 2's controller is now shown at the world map screen. (@ds-sloth, @0lhi)
 -Controls: don't continuously rumble on player hurt after getting level exit NPC. (@ds-sloth)
 -Added compatibility flags for multiple early vanilla bugfixes. (@ds-sloth)
+-Added level exit cheats from SMBX2. (@SpencerEverly, @0lhi, @ds-sloth)
 
 Changelog for 1.3.6
 -Added an ability to toggle drawing of the HUD and other on-screen meta data using F1 key (@Wohlstand)
